--- a/index.html
+++ b/index.html
@@ -70,29 +70,227 @@
             </div>
             <h3 class="home__right__title">Подобрать обучение</h3>
             <h4>Какое у Вас образование?</h4>
-           <div class="home__right__features">
-            <p>9 классов</p>
-            <p>11 классов</p>
-            <p>Училище</p>
-            <p>Колледж</p>
-            <p>Техникум</p>
-            <p>Неоконченное высшее</p>
-            <p>Высше</p>
-           </div>
+            <div class="home__right__features">
+              <p>9 классов</p>
+              <p>11 классов</p>
+              <p>Училище</p>
+              <p>Колледж</p>
+              <p>Техникум</p>
+              <p>Неоконченное высшее</p>
+              <p>Высше</p>
+            </div>
 
             <button class="home__right__btn">Отправить заявку</button>
           </div>
         </div>
       </section>
       <section class="partners">
-        <img src="images/home-img/Rectangle 387.svg" alt="images">
-        <img src="images/home-img/Rectangle 388.svg" alt="images">
-        <img src="images/home-img/Rectangle 386.svg" alt="images">
-        <img src="images/home-img/Rectangle 390.svg" alt="images">
-        <img src="images/home-img/Rectangle 391.svg" alt="images">
-        <img src="images/home-img/Rectangle 384.svg" alt="images">
-        <img src="images/home-img/Rectangle 385.svg" alt="images">
-        <img src="images/home-img/Rectangle 389.svg" alt="images">
+        <img src="images/home-img/Rectangle 387.svg" alt="images" />
+        <img src="images/home-img/Rectangle 388.svg" alt="images" />
+        <img src="images/home-img/Rectangle 386.svg" alt="images" />
+        <img src="images/home-img/Rectangle 390.svg" alt="images" />
+        <img src="images/home-img/Rectangle 391.svg" alt="images" />
+        <img src="images/home-img/Rectangle 384.svg" alt="images" />
+        <img src="images/home-img/Rectangle 385.svg" alt="images" />
+        <img src="images/home-img/Rectangle 389.svg" alt="images" />
+      </section>
+      <section class="directions">
+        <div class="container">
+          <h1 class="directions__title">Направления</h1>
+          <div class="directions__row">
+            <h5>Высшее <sup>14</sup></h5>
+            <h5 class="blur">Среднее <sup>9</sup></h5>
+            <h5 class="blur">ДПО <sup>35</sup></h5>
+            <img src="images/home-img/line-bg.svg" alt="" />
+            <img src="images/home-img/black-line.svg" alt="" />
+          </div>
+
+          <div class="directions__cards">
+            <div
+              class="directions__cards__item"
+              style="background-image: url(images/home-img/tourism-bg.svg)"
+            >
+              <h5>Туризм</h5>
+              <p>
+                • от 12 500 ₽ семестр <br />
+                • от 2,5 лет
+              </p>
+              <h4>
+                <img src="images/home-img/consult.svg" alt="" />консультация
+              </h4>
+              <img src="images/home-img/tourism.svg" alt="images" />
+            </div>
+            <div
+              class="directions__cards__item"
+              style="background-image: url(images/home-img/lawsuit-bg.svg)"
+            >
+              <h5>Юриспруденция</h5>
+              <p>
+                • от 12 500 ₽ семестр <br />
+                • от 2,5 лет
+              </p>
+              <h4>
+                <img src="images/home-img/consult.svg" alt="" />консультация
+              </h4>
+              <img src="images/home-img/lawsuit.svg" alt="" />
+            </div>
+            <div
+              class="directions__cards__item"
+              style="background-image: url(images/home-img/economy-bg.svg)"
+            >
+              <h5>Экономика</h5>
+              <p>
+                • от 12 500 ₽ семестр <br />
+                • от 2,5 лет
+              </p>
+              <h4>
+                <img src="images/home-img/consult.svg" alt="" />консультация
+              </h4>
+              <img src="images/home-img/economy.svg" alt="" />
+            </div>
+            <div
+              class="directions__cards__item"
+              style="background-image: url(images/home-img/reporter-bg.svg)"
+            >
+              <h5>Журналистика</h5>
+              <p>
+                • от 12 500 ₽ семестр <br />
+                • от 2,5 лет
+              </p>
+              <h4>
+                <img src="images/home-img/consult.svg" alt="" />консультация
+              </h4>
+              <img src="images/home-img/reporter.svg" alt="" />
+            </div>
+            <div
+              class="directions__cards__item"
+              style="background-image: url(images/home-img/healthcare-bg.svg)"
+            >
+              <h5>Медицинская оптика</h5>
+              <p>
+                • от 12 500 ₽ семестр <br />
+                • от 2,5 лет
+              </p>
+              <h4>
+                <img src="images/home-img/consult.svg" alt="" />консультация
+              </h4>
+              <img src="images/home-img/healthcare.svg" alt="" />
+            </div>
+            <div
+              class="directions__cards__item"
+              style="background-image: url(images/home-img/ads-bg.svg)"
+            >
+              <h5>Реклама и связи</h5>
+              <p>
+                • от 12 500 ₽ семестр <br />
+                • от 2,5 лет
+              </p>
+              <h4>
+                <img src="images/home-img/consult.svg" alt="" />консультация
+              </h4>
+              <img src="images/home-img/ads.svg" alt="" />
+            </div>
+          </div>
+          <button class="directions__btn">Показать ещё 24 направления ></button>
+        </div>
+      </section>
+      <section class="diploma">
+        <div class="container">
+          <div class="diploma__left">
+            <h1 class="diploma__title">Вы получите — диплом гособразца</h1>
+            <p>
+              Все наши учебные заведения-партнёры <br />
+              имеют госаккредитацию, а дипломы заносятся <br />
+              в федеральный реестр.
+            </p>
+            <div class="directions__row">
+              <h5>Высшее</h5>
+              <h5 class="blur">Среднее</h5>
+              <h5 class="blur">ДПО</h5>
+              <img id="line" src="images/home-img/line-bg.svg" alt="" />
+              <img src="images/home-img/black-line.svg" alt="" />
+            </div>
+          </div>
+          <div class="diploma__right">
+            <img src="images/home-img/diploma.svg" alt="diploma" />
+          </div>
+        </div>
+      </section>
+      <section class="feedback">
+        <div class="container">
+          <div class="feedback__title">
+            <h1>
+              Отзывы реальных <br />
+              студентов
+            </h1>
+            <img src="images/home-img/slider - arrow.svg" alt="slider" />
+          </div>
+          <div class="feedback__row">
+            <div class="feedback__card">
+              <div class="feedback__text">
+                <p>
+                  Рассказать могу много, но это будет субъективный рассказ,
+                  потому что я учился на профиле, который все почему-то обходят)
+                  Ты собираешься поступать на бакалавриат или уже в
+                  магистратуру? <br>
+                   Вообще не было ощущения, что тебе просто дали
+                  доступ к материалу и ты сидишь один дома и просто
+                  самостоятельно все изучаешь.
+                </p>
+              </div>
+              <div class="feedback__img">
+                <div class="left"><img src="images/home-img/avatar-1.svg" alt="avatar-1"></div>
+                <div class="right"><h5>Антон Пабаловец</h5>
+                  <p>Московский экономический институт</p>
+                  <button><img src="images/home-img/consult.svg" alt="">
+                написать в vk</button>
+                </div>
+              </div>
+            </div>
+            <div class="feedback__card">
+              <div class="feedback__text">
+                <p>
+                  Рассказать могу много, но это будет субъективный рассказ,
+                  потому что я учился на профиле, который все почему-то обходят)
+                  Ты собираешься поступать на бакалавриат или уже в
+                  магистратуру? <br>
+                   Вообще не было ощущения, что тебе просто дали
+                  доступ к материалу и ты сидишь один дома и просто
+                  самостоятельно все изучаешь.
+                </p>
+              </div>
+              <div class="feedback__img">
+                <div class="left"><img src="images/home-img/avatar-1.svg" alt="avatar-1"></div>
+                <div class="right"><h5>Антон Пабаловец</h5>
+                  <p>Московский экономический институт</p>
+                  <button><img src="images/home-img/consult.svg" alt="">
+                написать в vk</button>
+                </div>
+              </div>
+            </div>
+            <div class="feedback__card">
+              <div class="feedback__text">
+                <p>
+                  Рассказать могу много, но это будет субъективный рассказ,
+                  потому что я учился на профиле, который все почему-то обходят)
+                  Ты собираешься поступать на бакалавриат или уже в
+                  магистратуру? <br>
+                   Вообще не было ощущения, что тебе просто дали
+                  доступ к материалу и ты сидишь один дома и просто
+                  самостоятельно все изучаешь.
+                </p>
+              </div>
+              <div class="feedback__img">
+                <div class="left"><img src="images/home-img/avatar-1.svg" alt="avatar-1"></div>
+                <div class="right"><h5>Антон Пабаловец</h5>
+                  <p>Московский экономический институт</p>
+                  <button><img src="images/home-img/consult.svg" alt="">
+                написать в vk</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
